Upgraded twelvemonkeys.
Upgraded twelvemonkeys library and added JPEG2000 as MIME type.
JPEG2000 is still not supported for extraction, but now the error message will be more appropriate.